--- a/resources/var/apps/modules/layout/home/murilo003skeleton/style.css
+++ b/resources/var/apps/modules/layout/home/murilo003skeleton/style.css
@@ -22,8 +22,8 @@ ul.items-container-murilo003skeleton {
   align-items: center;
   justify-content: center;
   background: transparent;
-  border: 2px solid red;
-  color: white;
+  /*border: 2px solid red;*/
+  /*color: white;*/
   text-align: center;
   height: 35px;
 }
@@ -54,10 +54,12 @@ ul.items-container-murilo003skeleton {
 }
 
 .murilo003skeleton-name {
+  display: none !important;
   font-size: 10px;
   margin-top: 4px;
 }
 
 .murilo003skeleton-icon {
+  display: none !important;
   height: 30px;
 }
